<resources>
    <string name="app_name">StoryApp_Intermediate_Sub2</string>

    <!--    Widget      -->
    <string name="appwidget_text">Stories</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">NO DATA</string>
    <string name="not_yet_login">Login first</string>
    <string name="desc_cannot_blank">Description cannot be blank</string>

    <!--    App         -->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="pass_min_length">Password must at least 6 letter</string>
    <string name="name_min_length">Name must at least 4 letter</string>
    <string name="email_not_valid">Email format is not valid</string>
    <string name="login_button_validation">Email or Password format is not valid</string>
    <string name="login_auth_failed">Incorrect Email or Password</string>
    <string name="register_success">Successfully registered. Please Login.</string>
    <string name="register_failed">Email is invalid or already taken.</string>
    <string name="name">name</string>
    <string name="image_feed">Feed photo</string>
    <string name="avatar_photo">avatar photo</string>
    <string name="add_story">Add Story</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="description">Description :</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="upload">Upload</string>
    <string name="camera_x">CameraX</string>
    <string name="choose_photo_first">Please choose a photo first</string>
    <string name="upload_desc_blank">no description.</string>
    <string name="story_home">Story Home</string>
    <string name="detail_story">Detail Story</string>
    <string name="upload_photo">Upload a photo</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="could_not_get_permission">Could not get permission</string>
    <string name="upload_success">Photo successfully uploaded</string>
    <string name="upload_failed">Photo failed to upload</string>

    <string name="show_map">Show Map</string>
    <string name="story_map">Story Map</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="enable_current_location">Include Current Location in Story</string>
    <string name="retry">Retry</string>
    <string name="refresh_story">Refresh</string>
</resources>