<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.DetailStoryActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_img_avatar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/account_circle_48px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/avatar_photo" />

    <TextView
        android:id="@+id/detail_tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/detail_img_avatar"
        app:layout_constraintStart_toEndOf="@id/detail_img_avatar"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/detail_tv_name"
        app:layout_constraintStart_toStartOf="@id/detail_tv_name"
        tools:text="@tools:sample/cities" />

    <ImageView
        android:id="@+id/detail_img_feed"
        android:transitionName="detailImageTransition"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/detail_img_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/image_feed" />

    <TextView
        android:id="@+id/detail_tv_label_desc"
        android:labelFor="@id/detail_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/detail_img_feed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_desc"
        android:transitionName="detailDescTransition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/detail_tv_label_desc"
        app:layout_constraintStart_toStartOf="@id/detail_tv_label_desc"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@tools:sample/lorem/random"
        android:maxLines="8" />

</androidx.constraintlayout.widget.ConstraintLayout>